--- a/.github/workflows/data-structures-and-algorithms-build-and-test.yml
+++ b/.github/workflows/data-structures-and-algorithms-build-and-test.yml
@@ -33,5 +33,5 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
 
-    - name: Execute unit tests
-      run: dotnet test
+    - name: Build project 
+      run: dotnet build ./Data%20Structures%20and%20Algorithms/Algorithms/Algorigthms.sln
