--- a/.github/workflows/data-structures-and-algorithms-build-and-test.yml
+++ b/.github/workflows/data-structures-and-algorithms-build-and-test.yml
@@ -11,26 +11,27 @@ on:
 jobs:
 
   build:
-    runs-on: windows-latest  # For a list of available runner types, refer to
-                             # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        dotnet-version: ['3.0', '3.1.x', '5.0.x' ]
 
     env:
-      Solution_Name: .\Data Structures and Algorithms\Algorithms\Algorithms.sln
-      Test_Project_Path: .\Data Structures and Algorithms\Algorithms\Algorithms.Tests\Algorithms.Tests.csproj      
+      working_dir: './Data Structures and Algorithms/Algorithms'
+      solution: 'Algorithms.sln'
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+      uses: actions/checkout@v2      
 
-    - name: Install .NET Core
-      uses: actions/setup-dotnet@v1
+    - name: Setup .NET Core SDK ${{ matrix.dotnet-version }}
+      uses: actions/setup-dotnet@v1.7.2
       with:
-        dotnet-version: 5.0.x
-
+        dotnet-version: ${{ matrix.dotnet-version }}
+    - name: Install dependencies
+      run: dotnet restore {{ env.working_dir }}/{{ env.solution }}
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Build project 
-      run: dotnet build {{ env.Solution_Name }}
+      run: dotnet build {{ env.working_dir }}/{{ env.solution }}
