--- a/.github/workflows/data-structures-and-algorithms-build-and-test.yml
+++ b/.github/workflows/data-structures-and-algorithms-build-and-test.yml
@@ -29,9 +29,9 @@ jobs:
       with:
         dotnet-version: ${{ matrix.dotnet-version }}
     - name: Install dependencies
-      run: dotnet restore {{ env.working_dir }}/{{ env.solution }}
+      run: dotnet restore ${{ env.working_dir }}/${{ env.solution }}
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Build project 
-      run: dotnet build {{ env.working_dir }}/{{ env.solution }}
+      run: dotnet build ${{ env.working_dir }}/${{ env.solution }}
