--- a/.github/workflows/data-structures-and-algorithms-build-and-test.yml
+++ b/.github/workflows/data-structures-and-algorithms-build-and-test.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         dotnet-version: ${{ matrix.dotnet-version }}
     - name: Install dependencies
-      run: dotnet restore ${{ env.working_dir }}/${{ env.solution }}
+      run: dotnet restore './Data Structures and Algorithms/Algorithms/Algorithms.sln'
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
 
