--- a/.github/workflows/data-structures-and-algorithms-build-and-test.yml
+++ b/.github/workflows/data-structures-and-algorithms-build-and-test.yml
@@ -17,7 +17,7 @@ jobs:
         dotnet-version: ['3.0', '3.1.x', '5.0.x' ]
 
     env:
-      working_dir: './DataStructuresAndAlgorithms/Algorithms'
+      working_dir: './DataStructuresAndAlgorithms/Algorithms/'
       solution: 'Algorithms.sln'
 
     steps:
@@ -29,9 +29,11 @@ jobs:
       with:
         dotnet-version: ${{ matrix.dotnet-version }}
     - name: Install dependencies
+      working-directory: ${{ env.working_dir }}
       run: dotnet restore
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Build project 
+      working-directory: ${{ env.working_dir }}
       run: dotnet build
