--- a/.github/workflows/data-structures-and-algorithms-build-and-test.yml
+++ b/.github/workflows/data-structures-and-algorithms-build-and-test.yml
@@ -27,10 +27,9 @@ jobs:
       uses: actions/setup-dotnet@v1.7.2
       with:
         dotnet-version: ${{ matrix.dotnet-version }}
+        
     - name: Install dependencies      
       run: dotnet restore ${{ env.solution }}
-    - name: Setup MSBuild.exe
-      uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Build project 
-      run: dotnet build ${{ env.solution }}
+      run: dotnet build ${{ env.solution }} --no-restore 
