--- a/.github/workflows/data-structures-and-algorithms-build-and-test.yml
+++ b/.github/workflows/data-structures-and-algorithms-build-and-test.yml
@@ -27,9 +27,12 @@ jobs:
       uses: actions/setup-dotnet@v1.7.2
       with:
         dotnet-version: ${{ matrix.dotnet-version }}
-        
-    - name: Install dependencies      
+
+    - name: Restore dependencies      
       run: dotnet restore ${{ env.solution }}
 
     - name: Build project 
       run: dotnet build ${{ env.solution }} --no-restore 
+
+    - name: Run Unit Tests
+      run: dotnet test ${{ env.solution }}
