fixed broken test

--- a/.github/workflows/data-structures-and-algorithms-build-and-test.yml
+++ b/.github/workflows/data-structures-and-algorithms-build-and-test.yml
@@ -4,6 +4,7 @@ on:
   pull_request:
     paths:
       - '/Data%20Structures%20and%20Algorithms/Algorithms/**'
+    branches: [ main ]
   workflow_dispatch:
   
   
