fixed broken test

--- a/.github/workflows/data-structures-and-algorithms-build-and-test.yml
+++ b/.github/workflows/data-structures-and-algorithms-build-and-test.yml
@@ -1,7 +1,7 @@
 name: Build and Test Algorithms
 
 on:
-  pull_request:
+  push:
     paths:
       - '/DataStructuresAndAlgorithms/Algorithms/**'
   workflow_dispatch:
