--- a/.github/workflows/data-structures-and-algorithms-build-and-test.yml
+++ b/.github/workflows/data-structures-and-algorithms-build-and-test.yml
@@ -5,12 +5,9 @@ on:
     paths:
       - '/DataStructuresAndAlgorithms/Algorithms/**'
   workflow_dispatch:
-  
-  
 
 jobs:
-
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
