--- a/.github/workflows/data-structures-and-algorithms-build-and-test.yml
+++ b/.github/workflows/data-structures-and-algorithms-build-and-test.yml
@@ -4,6 +4,9 @@ on:
   push:
     paths:
       - '/DataStructuresAndAlgorithms/Algorithms/**'
+  pull_request:
+    paths:
+      - '/DataStructuresAndAlgorithms/Algorithms/**'
   workflow_dispatch:
 
 jobs:
