--- a/.github/workflows/algorithms-build-and-deploy.yml
+++ b/.github/workflows/algorithms-build-and-deploy.yml
@@ -2,6 +2,7 @@ name: Algorithms Build and Deploy
 
 on:
   push:
+    branches: [ main ]
     paths:
       - 'DataStructuresAndAlgorithms/Algorithms/**'
   workflow_dispatch:
