--- a/.github/workflows/algorithms-build-and-deploy.yml
+++ b/.github/workflows/algorithms-build-and-deploy.yml
@@ -2,7 +2,8 @@ name: Algorithms Build and Deploy
 
 on:
   push:
-    branches: [ main ]
+    branches: 
+      - main
     paths:
       - 'DataStructuresAndAlgorithms/Algorithms/**'
   workflow_dispatch:
