Added RansomNote exercise

--- a/DataStructuresAndAlgorithms/Algorithms/Algorithms.Tests/Algorithms.Tests.csproj
+++ b/DataStructuresAndAlgorithms/Algorithms/Algorithms.Tests/Algorithms.Tests.csproj
@@ -17,4 +17,9 @@
     <ProjectReference Include="..\Algorithms\Algorithms.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Exercises\leetcode\Medium\" />
+    <Folder Include="Exercises\leetcode\Hard\" />
+  </ItemGroup>
+
 </Project>
