--- a/.github/workflows/algorithms-build-and-deploy.yml
+++ b/.github/workflows/algorithms-build-and-deploy.yml
@@ -39,4 +39,4 @@ jobs:
       run: dotnet test ${{ env.solution }}
 
     - name: Deploy to staging
-      run: dotnet publish ${{ env.package }} --output ${{ env.output }} -c Release --framework {{ matrix.dotnet-version }} --self-contained true
+      run: dotnet publish ${{ env.package }} --output ${{ env.output }} -c Release --self-contained false
