--- a/.github/workflows/algorithms-build-and-deploy.yml
+++ b/.github/workflows/algorithms-build-and-deploy.yml
@@ -45,10 +45,4 @@ jobs:
       run: dotnet test ${{ env.solution }}
 
     - name: Deploy to staging
-      run: dotnet publish ${{ env.package }} -c Release -o ${{ env.output }}
-    
-    - name: Publish artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{ github.run_number }}
-        path: ${{ env.output }}
+      run: dotnet publish ${{ env.package }} -c Release
