--- a/.github/workflows/algorithms-build-and-test.yml
+++ b/.github/workflows/algorithms-build-and-test.yml
@@ -2,6 +2,7 @@ name: Algorithms Build and Test
 
 on:
   pull_request:
+    branches: [ main ]
     paths:
       - 'DataStructuresAndAlgorithms/Algorithms/**'
   workflow_dispatch:
