still working on assets

--- a/.github/workflows/algorithms-build-and-deploy.yml
+++ b/.github/workflows/algorithms-build-and-deploy.yml
@@ -27,7 +27,7 @@ jobs:
     env:
       solution: './DataStructuresAndAlgorithms/Algorithms/Algorithms.sln'
       package: './DataStructuresAndAlgorithms/Algorithms/Algorithms/Algorithms.csproj'
-      output: 'Packages/Staging/DataStructuresAndAlgorithms'
+      output: './Packages/Staging/DataStructuresAndAlgorithms'
 
     steps:
     - name: Checkout
