--- a/.github/workflows/algorithms-build-and-deploy.yml
+++ b/.github/workflows/algorithms-build-and-deploy.yml
@@ -20,9 +20,6 @@ jobs:
     strategy:
       matrix:
         dotnet-version: [ '5.0.x' ]
-    defaults:
-      run:
-        shell: bash
 
     env:
       solution: './DataStructuresAndAlgorithms/Algorithms/Algorithms.sln'
@@ -59,6 +56,7 @@ jobs:
         name: published-package
     
     - name: Ship artifacts
-      run: |
-        mkdir ${{ env.output }}/Algorithms
-        mv ${{ env.output }}/* ${{ env.output }}/Algorithms
+      uses: actions/copy-action@0.0.1
+      with:
+        source: ${{ env.output }}
+        target: ${{ env.output }}
