--- a/DataStructuresAndAlgorithms/Algorithms/Algorithms.Tests/Algorithms.Tests.csproj
+++ b/DataStructuresAndAlgorithms/Algorithms/Algorithms.Tests/Algorithms.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0</TargetFrameworks>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -18,7 +18,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Exercises\leetcode\Medium\" />
     <Folder Include="Exercises\leetcode\Hard\" />
   </ItemGroup>
 
