--- a/react-playground/demo-app/package.json
+++ b/react-playground/demo-app/package.json
@@ -41,9 +41,13 @@
     "webpack-dev-server": "4.4.0"
   },
   "dependencies": {
+    "@mui/icons-material": "5.1.0",
+    "@mui/material": "5.1.0",
+    "@mui/styled-engine-sc": "5.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router": "6.0.2",
-    "react-router-dom": "6.0.2"
+    "react-router-dom": "6.0.2",
+    "styled-components": "5.3.3"
   }
 }
