--- a/react-playground/demo-app/package.json
+++ b/react-playground/demo-app/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/parser": "5.3.1",
     "babel-loader": "8.2.3",
     "clean-webpack-plugin": "4.0.0",
+    "css-loader": "6.5.1",
     "eslint": "8.2.0",
     "eslint-plugin-react": "7.27.0",
     "eslint-plugin-react-hooks": "4.3.0",
@@ -41,9 +42,12 @@
     "webpack-dev-server": "4.4.0"
   },
   "dependencies": {
+    "@emotion/react": "11.5.0",
+    "@emotion/styled": "11.3.0",
     "@mui/icons-material": "5.1.0",
     "@mui/material": "5.1.0",
     "@mui/styled-engine-sc": "5.1.0",
+    "@mui/types": "7.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router": "6.0.2",
