--- a/react-playground/demo-app/package.json
+++ b/react-playground/demo-app/package.json
@@ -34,6 +34,7 @@
     "eslint-webpack-plugin": "3.1.1",
     "fork-ts-checker-webpack-plugin": "6.4.0",
     "html-webpack-plugin": "5.5.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "9.2.6",
     "ts-node": "10.4.0",
     "typescript": "4.4.4",
