--- a/react-playground/demo-app/.eslintrc.json
+++ b/react-playground/demo-app/.eslintrc.json
@@ -13,6 +13,13 @@
       "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
+      "no-console": "error",
+      "no-empty-function": "error",
+      "no-const-assign": "error",
+      "no-constant-condition": "error",
+      "no-inner-declarations": "warn",
+      "no-invalid-this": "error",
+      "one-var-declaration-per-line": "warn",      
       "react-hooks/rules-of-hooks": "error",
       "react-hooks/exhaustive-deps": "warn",
       "react/prop-types": "off"
