--- a/react-playground/demo-app/.eslintrc.json
+++ b/react-playground/demo-app/.eslintrc.json
@@ -1,34 +1,31 @@
 {
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "ecmaVersion": 2018,
-      "sourceType": "module"
-    },
-    "plugins": [
-      "@typescript-eslint",
-      "react-hooks"
-    ],
-    "extends": [
-      "plugin:react/recommended",
-      "plugin:@typescript-eslint/recommended"
-    ],
-    "rules": {
-      "no-console": "error",
-      "no-empty-function": "error",
-      "no-const-assign": "error",
-      "no-constant-condition": "error",
-      "no-inner-declarations": "warn",
-      "no-invalid-this": "error",
-      "one-var-declaration-per-line": "warn",      
-      "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "warn",
-      "react/prop-types": "off"
-    },
-    "settings": {
-      "react": {
-        "pragma": "React",
-        "version": "detect"
-      }
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "plugins": ["@typescript-eslint", "react-hooks"],
+  "extends": [
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended",
+    "prettier"
+  ],
+  "rules": {
+    "no-console": "error",
+    "no-empty-function": "error",
+    "no-const-assign": "error",
+    "no-constant-condition": "error",
+    "no-inner-declarations": "warn",
+    "no-invalid-this": "error",
+    "one-var-declaration-per-line": "warn",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn",
+    "react/prop-types": "off"
+  },
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "detect"
     }
   }
-  
+}
