--- a/react-playground/demo-app/package.json
+++ b/react-playground/demo-app/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.config.ts",
-    "start": "webpack serve --config webpack.dev.config.ts"
+    "start": "webpack serve --config webpack.dev.config.ts",
+    "prettier": "npx prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -29,11 +30,13 @@
     "clean-webpack-plugin": "4.0.0",
     "css-loader": "6.5.1",
     "eslint": "8.2.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-react": "7.27.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "eslint-webpack-plugin": "3.1.1",
     "fork-ts-checker-webpack-plugin": "6.4.0",
     "html-webpack-plugin": "5.5.0",
+    "prettier": "2.4.1",
     "style-loader": "^3.3.1",
     "ts-loader": "9.2.6",
     "ts-node": "10.4.0",
