--- a/react-playground/demo-app/package.json
+++ b/react-playground/demo-app/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.config.ts",
     "start": "webpack serve --config webpack.dev.config.ts",
-    "prettier": "npx prettier --write ."
+    "prettier": "npx prettier --write ./src/"
   },
   "keywords": [],
   "author": "",
