--- a/react-playground/demo-app/package.json
+++ b/react-playground/demo-app/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.prod.config.ts",
     "start": "webpack serve --config webpack.dev.config.ts",
-    "prettier": "npx prettier --write ./src/"
+    "prettier": "npx prettier --write ./src/",
+    "prepare": "cd ../../ && husky install ./react-playground/demo-app/.husky"
   },
   "keywords": [],
   "author": "",
@@ -36,6 +37,8 @@
     "eslint-webpack-plugin": "3.1.1",
     "fork-ts-checker-webpack-plugin": "6.4.0",
     "html-webpack-plugin": "5.5.0",
+    "husky": "7.0.4",
+    "lint-staged": "12.0.2",
     "prettier": "2.4.1",
     "style-loader": "^3.3.1",
     "ts-loader": "9.2.6",
