--- a/react-playground/demo-app/.eslintrc.json
+++ b/react-playground/demo-app/.eslintrc.json
@@ -1,26 +1,28 @@
 {
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
+    "tsconfigRootDir": "./",
+    "project": "['./tsconfig.json']",
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint", "react-hooks"],
+  "plugins": [
+    "@typescript-eslint",
+    "react-hooks"
+  ],
   "extends": [
     "plugin:react/recommended",
-    "plugin:@typescript-eslint/recommended",
-    "prettier"
+    "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
-    "no-console": "error",
-    "no-empty-function": "error",
-    "no-const-assign": "error",
-    "no-constant-condition": "error",
-    "no-inner-declarations": "warn",
-    "no-invalid-this": "error",
-    "one-var-declaration-per-line": "warn",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/prop-types": "off"
+    "react/prop-types": "warn",
+    "@typescript-eslint/explicit-module-boundary-types": "error",
+    "@typescript-eslint/explicit-function-return-type": "error",
+    "no-console": "warn",
+    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-explicit-any": "error"   
   },
   "settings": {
     "react": {
