--- a/react-playground/demo-app/package.json
+++ b/react-playground/demo-app/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack.prod.config.ts",
     "start": "webpack serve --config webpack.dev.config.ts",
     "prettier": "npx prettier --write ./src/",
-    "prepare": "cd ../../ && husky install ./react-playground/demo-app/.husky"
+    "prepare": "cd ../../ && husky install ./react-playground/demo-app/.husky",
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx src/"
   },
   "keywords": [],
   "author": "",
