--- a/react-playground/demo-app/.eslintrc.json
+++ b/react-playground/demo-app/.eslintrc.json
@@ -18,11 +18,14 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/prop-types": "warn",
+    "no-console": "warn",
     "@typescript-eslint/explicit-module-boundary-types": "error",
     "@typescript-eslint/explicit-function-return-type": "error",
-    "no-console": "warn",
     "@typescript-eslint/no-unused-vars": "error",
-    "@typescript-eslint/no-explicit-any": "error"   
+    "@typescript-eslint/no-explicit-any": "error",
+    "no-empty-function": "off",
+    "@typescript-eslint/no-empty-function": ["error"],
+    "@typescript-eslint/no-empty-interface": "error"  
   },
   "settings": {
     "react": {
