--- a/react-playground/demo-app/.prettierrc.json
+++ b/react-playground/demo-app/.prettierrc.json
@@ -1,5 +1,6 @@
 {
     "parser": "typescript",
     "singleQuote": true,
-    "printWidth": 80
+    "printWidth": 80,
+    "bracketSpacing": true
 }
